--- a/src/Aisys.Utilities/Aisys.Utilities.csproj
+++ b/src/Aisys.Utilities/Aisys.Utilities.csproj
@@ -4,6 +4,20 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/aisyshk/Aisys</RepositoryUrl>
+    <PackageTags>c#</PackageTags>
+    <PackageProjectUrl>https://github.com/aisyshk/Aisys</PackageProjectUrl>
+    <Description>Utilities for use by aisyshk</Description>
+    <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
