--- a/src/Aisys.Utilities/Aisys.Utilities.csproj
+++ b/src/Aisys.Utilities/Aisys.Utilities.csproj
@@ -9,8 +9,10 @@
     <RepositoryUrl>https://github.com/aisyshk/Aisys</RepositoryUrl>
     <PackageTags>c#</PackageTags>
     <PackageProjectUrl>https://github.com/aisyshk/Aisys</PackageProjectUrl>
-    <Description>Utilities for use by aisyshk</Description>
-    <Version>1.0.1</Version>
+    <Description>Utilities for use by https://github.com/aisyshk</Description>
+    <Version>1.0.2</Version>
+    <Authors>aisys</Authors>
+    <Copyright>2023 aisyshk</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
